--- a/assets/c/style.less
+++ b/assets/c/style.less
@@ -75,7 +75,8 @@ html {
     -ms-text-size-adjust: 100%; /* 2 */
 
 	color: #4d4d4d;
-	background: #eee url(../i/background.png);
+/*	background: #eee url(../i/background.png);*/
+	background: #eee url(http://static.tumblr.com/4g4xfxh/eICm65wjk/background.png);
 }
 
 /*
@@ -722,7 +723,8 @@ body {
 	margin-right: 0;
 	
 	padding-bottom: 50px;
-	background-image: url(../i/article/quote-background.png);
+/*	background-image: url(../i/article/quote-background.png);*/
+	background-image: url(http://static.tumblr.com/4g4xfxh/UJAm65whg/quote-background.png);
 	background-repeat: no-repeat;
 	background-position: 50% 100%;
 }
@@ -891,7 +893,8 @@ body {
 	overflow: hidden !important;
 	width: 38px !important;
 	height: 38px !important;
-	background-image: url(../i/ico/med.png);
+/*	background-image: url(../i/ico/med.png);*/
+	background-image: url(http://static.tumblr.com/4g4xfxh/Ik1m65wl8/med.png);
 	background-repeat: no-repeat;
 	background-position: 0 0;
 	vertical-align: middle;
@@ -937,7 +940,8 @@ body {
 	overflow: hidden !important;
 /*	width: 38px !important;*/
 	height: 17px !important;
-	background-image: url(../i/ico/small.png);
+/*	background-image: url(../i/ico/small.png);*/
+	background-image: url(http://static.tumblr.com/4g4xfxh/qAim65wm6/small.png);
 	background-repeat: no-repeat;
 	background-position: 0 0;
 }
@@ -980,7 +984,8 @@ body {
 	overflow: hidden !important;
 /*	width: 38px !important;*/
 /*	height: 17px !important;*/
-	background-image: url(../i/ico/large.png);
+/*	background-image: url(../i/ico/large.png);*/
+	background-image: url(http://static.tumblr.com/4g4xfxh/Pvgm65wkb/large.png);
 	background-repeat: no-repeat;
 	background-position: 0 0;
 }
@@ -1152,7 +1157,8 @@ body {
 }
 
 .widget-list > li {
-	background-image: url(../i/widget/li-background.png);
+/*	background-image: url(../i/widget/li-background.png);*/
+	background-image: url(http://static.tumblr.com/4g4xfxh/cIjm65won/li-background.png);
 	background-repeat: no-repeat;
 	background-position: 0 5px;
 	padding-left: 35px;
