--- a/assets/c/style.less
+++ b/assets/c/style.less
@@ -1,10 +1,10 @@
 @import "incl/constants.less";
 @import "incl/mixins.less";
 
-/*! ==========================================================================
+/* ===========================================================================
    $Base
    ========================================================================== */
-/*! based on normalize.css 2012-03-11T12:53 UTC - http://github.com/necolas/normalize.css */
+/*! started with normalize.css 2012-03-11T12:53 UTC - http://github.com/necolas/normalize.css */
 
 /* HTML5 display definitions
    ========================================================================== */
@@ -521,7 +521,7 @@ table {
 }
 
 
-/*! ==========================================================================
+/* ===========================================================================
    $Grid and grooves 
    ========================================================================== */
 
@@ -616,7 +616,7 @@ body {
 	}
 }
 
-/*! ==========================================================================
+/* ===========================================================================
    $Abstraction
    ========================================================================== */
 
@@ -664,7 +664,7 @@ body {
 	overflow: hidden;
 }
 
-/*! ==========================================================================
+/* ===========================================================================
    $Modules
    ========================================================================== */
 
@@ -1205,7 +1205,7 @@ body {
 	background-color: transparent;
 }
 
-/*! ==========================================================================
+/* ===========================================================================
    $Helper classes
    ========================================================================== */
 
