--- a/assets/c/style.less
+++ b/assets/c/style.less
@@ -536,7 +536,7 @@ body {
 	#rems > .padding-top(55);
 	
 	border-bottom: 1px solid #a6a5a5;
-	padding-bottom: 10px;
+	padding-bottom: 5px;
 }
 
 	.head-in {
@@ -700,6 +700,7 @@ body {
 
 .entry-footer {
 	color: #bdbbbb;
+	text-shadow: 0 1px 1px #f7f7f7;
 	#rems > .margin-top(30);
 	#rems > .font-size(13);
 	
@@ -851,7 +852,15 @@ body {
 }
 
 .adjacent-right:after {
+/*	content: ' ›';
+	font-weight: bold;
+	font-size: 2em;
+	line-height: 0;
+	position:relative;
+	top: .1em;
+*/
 	content: ' >';
+
 }
 
 
@@ -985,7 +994,7 @@ body {
 /*	width: 38px !important;*/
 /*	height: 17px !important;*/
 /*	background-image: url(../i/ico/large.png);*/
-	background-image: url(http://static.tumblr.com/4g4xfxh/Pvgm65wkb/large.png);
+	background-image: url(http://static.tumblr.com/4g4xfxh/ooHm6799i/large.png);
 	background-repeat: no-repeat;
 	background-position: 0 0;
 }
@@ -1024,6 +1033,12 @@ body {
 	width: 47px !important;
 	height: 39px !important;
 	background-position: -250px 0;
+}
+
+.ico-video {
+	width: 41px !important;
+	height: 42px !important;
+	background-position: -300px 0;
 }
 
 /*
@@ -1147,6 +1162,7 @@ body {
 .widget-title {
 	#rems > .margin-top(40);
 	#rems > .padding-bottom(11);
+	#rems > .font-size(18);
 	border-bottom: 2px groove #eee;
 }
 
