--- a/assets/c/style.less
+++ b/assets/c/style.less
@@ -547,6 +547,11 @@ body {
 		border-bottom: 1px solid #fff;
 	}
 
+	.l-hasdescription > .head-in {
+		margin-top: 0;
+	}
+
+
 .container {
 	/* see clearfix */
 	padding-top: 44px;
@@ -571,15 +576,6 @@ body {
 	padding-left: 49px;
 	border-left: 1px solid #fff;
 }
-
-.container {
-	overflow: hidden;
-}
-.content,.sidebar {
-	padding-bottom: 32760px;
-	margin-bottom: -32760px;
-}
-
 
 .theme-by {
 	color: #bbb;
@@ -739,9 +735,17 @@ body {
 /*	text-align: center;*/
 }
 
-.article-photo-feature > img {
+.article-photo-feature a {
+	background-color: transparent;
+}
+
+.article-photo-feature img {
 	border: 5px solid #fff;
 	.box-shadow(0 1px 3px rgba(56,56,56,.75));
+}
+
+.article-photo-feature a:hover img {
+	border-color: #b7b1a8;
 }
 
 .article-photo-caption {
@@ -882,23 +886,6 @@ body {
 	}
 }
 
-.adjacent-left:before {
-	content: '< ';
-}
-
-.adjacent-right:after {
-/*	content: ' ›';
-	font-weight: bold;
-	font-size: 2em;
-	line-height: 0;
-	position:relative;
-	top: .1em;
-*/
-	content: ' >';
-
-}
-
-
 /* $brand */
 .brand {
 	/* needs to reset both p & h1 */
@@ -906,7 +893,7 @@ body {
 	font-weight: bold;
 	letter-spacing: -2.5px;
 	line-height: 1;
-	text-shadow: 0 1px 1px #f7f7f7;
+	text-shadow: 0 1px 1px #f7f7f7; 
 
 	margin: 0;
 }
@@ -929,6 +916,11 @@ body {
 	color: #7e7e7e;
 	background-color: transparent;
 	text-decoration: none;
+}
+
+.brand-description {
+	width: 587px;
+	margin-bottom: 1.2em;
 }
 
 /* $icons */
@@ -1199,10 +1191,11 @@ body {
 	#rems > .padding-bottom(11);
 	#rems > .font-size(18);
 	border-bottom: 2px groove #eee;
+	text-shadow: 0 2px 1px #f7f7f7;
 }
 
 .widget-list {
-	#rems > .font-size(14);
+	#rems > .font-size(13);
 	list-style: none;
 	padding-left: 0;
 }
