--- a/assets/c/style.less
+++ b/assets/c/style.less
@@ -745,7 +745,8 @@ body {
 }
 
 .article-photo-feature a:hover img {
-	border-color: #b7b1a8;
+/*	border-color: #b7b1a8;*/
+	.box-shadow(0 2px 4px rgba(56,56,56,.95));
 }
 
 .article-photo-caption {
